@@ -60,12 +60,12 @@ public class XQueryLexer extends antlr.CharScanner implements XQueryTokenTypes, 
 	protected boolean inPragma = false;
 	protected String xqDoc = null;
 	protected XQueryContext context = null;
-	
+
 	public XQueryLexer(XQueryContext context, Reader in) {
 		this(in);
 		this.context = context;
 	}
-	
+
 	public String getXQDoc() {
 		String doc = xqDoc;
 		xqDoc = null;
@@ -94,116 +94,117 @@ public XQueryLexer(LexerSharedInputState state) {
 	caseSensitiveLiterals = true;
 	setCaseSensitive(true);
 	literals = new Hashtable();
-	literals.put(new ANTLRHashString("treat", this), Integer.valueOf(154));
-	literals.put(new ANTLRHashString("typeswitch", this), Integer.valueOf(125));
-	literals.put(new ANTLRHashString("copy-namespaces", this), Integer.valueOf(81));
-	literals.put(new ANTLRHashString("xpointer", this), Integer.valueOf(64));
-	literals.put(new ANTLRHashString("namespace", this), Integer.valueOf(72));
-	literals.put(new ANTLRHashString("no-preserve", this), Integer.valueOf(99));
-	literals.put(new ANTLRHashString("comment", this), Integer.valueOf(188));
-	literals.put(new ANTLRHashString("case", this), Integer.valueOf(147));
-	literals.put(new ANTLRHashString("option", this), Integer.valueOf(82));
-	literals.put(new ANTLRHashString("delete", this), Integer.valueOf(130));
-	literals.put(new ANTLRHashString("ne", this), Integer.valueOf(160));
-	literals.put(new ANTLRHashString("validate", this), Integer.valueOf(225));
-	literals.put(new ANTLRHashString("le", this), Integer.valueOf(162));
-	literals.put(new ANTLRHashString("greatest", this), Integer.valueOf(92));
-	literals.put(new ANTLRHashString("ancestor-or-self", this), Integer.valueOf(207));
-	literals.put(new ANTLRHashString("descendant-or-self", this), Integer.valueOf(203));
-	literals.put(new ANTLRHashString("insert", this), Integer.valueOf(129));
-	literals.put(new ANTLRHashString("variable", this), Integer.valueOf(84));
-	literals.put(new ANTLRHashString("where", this), Integer.valueOf(138));
-	literals.put(new ANTLRHashString("stable", this), Integer.valueOf(142));
-	literals.put(new ANTLRHashString("construction", this), Integer.valueOf(79));
-	literals.put(new ANTLRHashString("then", this), Integer.valueOf(148));
-	literals.put(new ANTLRHashString("preceding", this), Integer.valueOf(134));
-	literals.put(new ANTLRHashString("document-node", this), Integer.valueOf(190));
-	literals.put(new ANTLRHashString("collation", this), Integer.valueOf(88));
-	literals.put(new ANTLRHashString("to", this), Integer.valueOf(172));
-	literals.put(new ANTLRHashString("and", this), Integer.valueOf(151));
-	literals.put(new ANTLRHashString("module", this), Integer.valueOf(71));
-	literals.put(new ANTLRHashString("strip", this), Integer.valueOf(95));
-	literals.put(new ANTLRHashString("return", this), Integer.valueOf(139));
-	literals.put(new ANTLRHashString("inherit", this), Integer.valueOf(100));
-	literals.put(new ANTLRHashString("schema", this), Integer.valueOf(107));
-	literals.put(new ANTLRHashString("external", this), Integer.valueOf(106));
-	literals.put(new ANTLRHashString("unordered", this), Integer.valueOf(97));
-	literals.put(new ANTLRHashString("ordered", this), Integer.valueOf(96));
-	literals.put(new ANTLRHashString("mod", this), Integer.valueOf(176));
-	literals.put(new ANTLRHashString("following", this), Integer.valueOf(135));
-	literals.put(new ANTLRHashString("except", this), Integer.valueOf(182));
-	literals.put(new ANTLRHashString("text", this), Integer.valueOf(185));
-	literals.put(new ANTLRHashString("preserve", this), Integer.valueOf(94));
-	literals.put(new ANTLRHashString("function", this), Integer.valueOf(83));
-	literals.put(new ANTLRHashString("with", this), Integer.valueOf(132));
-	literals.put(new ANTLRHashString("gt", this), Integer.valueOf(163));
-	literals.put(new ANTLRHashString("preceding-sibling", this), Integer.valueOf(208));
-	literals.put(new ANTLRHashString("intersect", this), Integer.valueOf(181));
-	literals.put(new ANTLRHashString("version", this), Integer.valueOf(69));
-	literals.put(new ANTLRHashString("map", this), Integer.valueOf(116));
-	literals.put(new ANTLRHashString("at", this), Integer.valueOf(110));
-	literals.put(new ANTLRHashString("of", this), Integer.valueOf(153));
-	literals.put(new ANTLRHashString("is", this), Integer.valueOf(169));
-	literals.put(new ANTLRHashString("array", this), Integer.valueOf(117));
-	literals.put(new ANTLRHashString("empty-sequence", this), Integer.valueOf(111));
-	literals.put(new ANTLRHashString("or", this), Integer.valueOf(150));
-	literals.put(new ANTLRHashString("if", this), Integer.valueOf(123));
-	literals.put(new ANTLRHashString("least", this), Integer.valueOf(93));
-	literals.put(new ANTLRHashString("as", this), Integer.valueOf(109));
-	literals.put(new ANTLRHashString("by", this), Integer.valueOf(141));
-	literals.put(new ANTLRHashString("catch", this), Integer.valueOf(136));
-	literals.put(new ANTLRHashString("union", this), Integer.valueOf(180));
-	literals.put(new ANTLRHashString("try", this), Integer.valueOf(120));
-	literals.put(new ANTLRHashString("order", this), Integer.valueOf(90));
-	literals.put(new ANTLRHashString("xquery", this), Integer.valueOf(68));
-	literals.put(new ANTLRHashString("following-sibling", this), Integer.valueOf(204));
-	literals.put(new ANTLRHashString("node", this), Integer.valueOf(186));
-	literals.put(new ANTLRHashString("collection", this), Integer.valueOf(224));
-	literals.put(new ANTLRHashString("some", this), Integer.valueOf(121));
-	literals.put(new ANTLRHashString("ge", this), Integer.valueOf(164));
-	literals.put(new ANTLRHashString("declare", this), Integer.valueOf(75));
-	literals.put(new ANTLRHashString("for", this), Integer.valueOf(118));
-	literals.put(new ANTLRHashString("ascending", this), Integer.valueOf(143));
-	literals.put(new ANTLRHashString("isnot", this), Integer.valueOf(170));
-	literals.put(new ANTLRHashString("eq", this), Integer.valueOf(159));
-	literals.put(new ANTLRHashString("element", this), Integer.valueOf(89));
-	literals.put(new ANTLRHashString("default", this), Integer.valueOf(76));
-	literals.put(new ANTLRHashString("castable", this), Integer.valueOf(155));
-	literals.put(new ANTLRHashString("descending", this), Integer.valueOf(144));
-	literals.put(new ANTLRHashString("idiv", this), Integer.valueOf(175));
-	literals.put(new ANTLRHashString("boundary-space", this), Integer.valueOf(77));
-	literals.put(new ANTLRHashString("ancestor", this), Integer.valueOf(206));
-	literals.put(new ANTLRHashString("ordering", this), Integer.valueOf(78));
-	literals.put(new ANTLRHashString("instance", this), Integer.valueOf(152));
-	literals.put(new ANTLRHashString("replace", this), Integer.valueOf(127));
-	literals.put(new ANTLRHashString("no-inherit", this), Integer.valueOf(101));
-	literals.put(new ANTLRHashString("attribute", this), Integer.valueOf(187));
-	literals.put(new ANTLRHashString("empty", this), Integer.valueOf(91));
-	literals.put(new ANTLRHashString("cast", this), Integer.valueOf(156));
-	literals.put(new ANTLRHashString("value", this), Integer.valueOf(128));
-	literals.put(new ANTLRHashString("encoding", this), Integer.valueOf(87));
-	literals.put(new ANTLRHashString("schema-element", this), Integer.valueOf(212));
-	literals.put(new ANTLRHashString("into", this), Integer.valueOf(133));
-	literals.put(new ANTLRHashString("rename", this), Integer.valueOf(131));
-	literals.put(new ANTLRHashString("else", this), Integer.valueOf(149));
-	literals.put(new ANTLRHashString("import", this), Integer.valueOf(86));
-	literals.put(new ANTLRHashString("lt", this), Integer.valueOf(161));
-	literals.put(new ANTLRHashString("document", this), Integer.valueOf(191));
-	literals.put(new ANTLRHashString("self", this), Integer.valueOf(201));
-	literals.put(new ANTLRHashString("in", this), Integer.valueOf(140));
-	literals.put(new ANTLRHashString("let", this), Integer.valueOf(119));
-	literals.put(new ANTLRHashString("base-uri", this), Integer.valueOf(80));
-	literals.put(new ANTLRHashString("processing-instruction", this), Integer.valueOf(189));
-	literals.put(new ANTLRHashString("parent", this), Integer.valueOf(205));
-	literals.put(new ANTLRHashString("switch", this), Integer.valueOf(124));
-	literals.put(new ANTLRHashString("descendant", this), Integer.valueOf(202));
-	literals.put(new ANTLRHashString("update", this), Integer.valueOf(126));
-	literals.put(new ANTLRHashString("every", this), Integer.valueOf(122));
-	literals.put(new ANTLRHashString("group", this), Integer.valueOf(145));
-	literals.put(new ANTLRHashString("satisfies", this), Integer.valueOf(146));
-	literals.put(new ANTLRHashString("div", this), Integer.valueOf(174));
-	literals.put(new ANTLRHashString("item", this), Integer.valueOf(115));
-	literals.put(new ANTLRHashString("child", this), Integer.valueOf(200));
+	literals.put(new ANTLRHashString("treat", this), new Integer(155));
+	literals.put(new ANTLRHashString("typeswitch", this), new Integer(125));
+	literals.put(new ANTLRHashString("copy-namespaces", this), new Integer(81));
+	literals.put(new ANTLRHashString("xpointer", this), new Integer(64));
+	literals.put(new ANTLRHashString("namespace", this), new Integer(72));
+	literals.put(new ANTLRHashString("no-preserve", this), new Integer(99));
+	literals.put(new ANTLRHashString("comment", this), new Integer(189));
+	literals.put(new ANTLRHashString("case", this), new Integer(148));
+	literals.put(new ANTLRHashString("option", this), new Integer(82));
+	literals.put(new ANTLRHashString("delete", this), new Integer(130));
+	literals.put(new ANTLRHashString("ne", this), new Integer(161));
+	literals.put(new ANTLRHashString("validate", this), new Integer(226));
+	literals.put(new ANTLRHashString("le", this), new Integer(163));
+	literals.put(new ANTLRHashString("greatest", this), new Integer(92));
+	literals.put(new ANTLRHashString("ancestor-or-self", this), new Integer(208));
+	literals.put(new ANTLRHashString("descendant-or-self", this), new Integer(204));
+	literals.put(new ANTLRHashString("insert", this), new Integer(129));
+	literals.put(new ANTLRHashString("variable", this), new Integer(84));
+	literals.put(new ANTLRHashString("where", this), new Integer(139));
+	literals.put(new ANTLRHashString("stable", this), new Integer(143));
+	literals.put(new ANTLRHashString("construction", this), new Integer(79));
+	literals.put(new ANTLRHashString("then", this), new Integer(149));
+	literals.put(new ANTLRHashString("preceding", this), new Integer(134));
+	literals.put(new ANTLRHashString("document-node", this), new Integer(191));
+	literals.put(new ANTLRHashString("collation", this), new Integer(88));
+	literals.put(new ANTLRHashString("to", this), new Integer(173));
+	literals.put(new ANTLRHashString("and", this), new Integer(152));
+	literals.put(new ANTLRHashString("module", this), new Integer(71));
+	literals.put(new ANTLRHashString("strip", this), new Integer(95));
+	literals.put(new ANTLRHashString("return", this), new Integer(138));
+	literals.put(new ANTLRHashString("inherit", this), new Integer(100));
+	literals.put(new ANTLRHashString("schema", this), new Integer(107));
+	literals.put(new ANTLRHashString("external", this), new Integer(106));
+	literals.put(new ANTLRHashString("unordered", this), new Integer(97));
+	literals.put(new ANTLRHashString("ordered", this), new Integer(96));
+	literals.put(new ANTLRHashString("mod", this), new Integer(177));
+	literals.put(new ANTLRHashString("following", this), new Integer(135));
+	literals.put(new ANTLRHashString("allowing", this), new Integer(141));
+	literals.put(new ANTLRHashString("except", this), new Integer(183));
+	literals.put(new ANTLRHashString("text", this), new Integer(186));
+	literals.put(new ANTLRHashString("preserve", this), new Integer(94));
+	literals.put(new ANTLRHashString("function", this), new Integer(83));
+	literals.put(new ANTLRHashString("with", this), new Integer(132));
+	literals.put(new ANTLRHashString("gt", this), new Integer(164));
+	literals.put(new ANTLRHashString("preceding-sibling", this), new Integer(209));
+	literals.put(new ANTLRHashString("intersect", this), new Integer(182));
+	literals.put(new ANTLRHashString("version", this), new Integer(69));
+	literals.put(new ANTLRHashString("map", this), new Integer(116));
+	literals.put(new ANTLRHashString("at", this), new Integer(110));
+	literals.put(new ANTLRHashString("of", this), new Integer(154));
+	literals.put(new ANTLRHashString("is", this), new Integer(170));
+	literals.put(new ANTLRHashString("array", this), new Integer(117));
+	literals.put(new ANTLRHashString("empty-sequence", this), new Integer(111));
+	literals.put(new ANTLRHashString("or", this), new Integer(151));
+	literals.put(new ANTLRHashString("if", this), new Integer(123));
+	literals.put(new ANTLRHashString("least", this), new Integer(93));
+	literals.put(new ANTLRHashString("as", this), new Integer(109));
+	literals.put(new ANTLRHashString("by", this), new Integer(142));
+	literals.put(new ANTLRHashString("catch", this), new Integer(136));
+	literals.put(new ANTLRHashString("union", this), new Integer(181));
+	literals.put(new ANTLRHashString("try", this), new Integer(120));
+	literals.put(new ANTLRHashString("order", this), new Integer(90));
+	literals.put(new ANTLRHashString("xquery", this), new Integer(68));
+	literals.put(new ANTLRHashString("following-sibling", this), new Integer(205));
+	literals.put(new ANTLRHashString("node", this), new Integer(187));
+	literals.put(new ANTLRHashString("collection", this), new Integer(225));
+	literals.put(new ANTLRHashString("some", this), new Integer(121));
+	literals.put(new ANTLRHashString("ge", this), new Integer(165));
+	literals.put(new ANTLRHashString("declare", this), new Integer(75));
+	literals.put(new ANTLRHashString("for", this), new Integer(118));
+	literals.put(new ANTLRHashString("ascending", this), new Integer(144));
+	literals.put(new ANTLRHashString("isnot", this), new Integer(171));
+	literals.put(new ANTLRHashString("eq", this), new Integer(160));
+	literals.put(new ANTLRHashString("element", this), new Integer(89));
+	literals.put(new ANTLRHashString("default", this), new Integer(76));
+	literals.put(new ANTLRHashString("castable", this), new Integer(156));
+	literals.put(new ANTLRHashString("descending", this), new Integer(145));
+	literals.put(new ANTLRHashString("idiv", this), new Integer(176));
+	literals.put(new ANTLRHashString("boundary-space", this), new Integer(77));
+	literals.put(new ANTLRHashString("ancestor", this), new Integer(207));
+	literals.put(new ANTLRHashString("ordering", this), new Integer(78));
+	literals.put(new ANTLRHashString("instance", this), new Integer(153));
+	literals.put(new ANTLRHashString("replace", this), new Integer(127));
+	literals.put(new ANTLRHashString("no-inherit", this), new Integer(101));
+	literals.put(new ANTLRHashString("attribute", this), new Integer(188));
+	literals.put(new ANTLRHashString("empty", this), new Integer(91));
+	literals.put(new ANTLRHashString("cast", this), new Integer(157));
+	literals.put(new ANTLRHashString("value", this), new Integer(128));
+	literals.put(new ANTLRHashString("encoding", this), new Integer(87));
+	literals.put(new ANTLRHashString("schema-element", this), new Integer(213));
+	literals.put(new ANTLRHashString("into", this), new Integer(133));
+	literals.put(new ANTLRHashString("rename", this), new Integer(131));
+	literals.put(new ANTLRHashString("else", this), new Integer(150));
+	literals.put(new ANTLRHashString("import", this), new Integer(86));
+	literals.put(new ANTLRHashString("lt", this), new Integer(162));
+	literals.put(new ANTLRHashString("document", this), new Integer(192));
+	literals.put(new ANTLRHashString("self", this), new Integer(202));
+	literals.put(new ANTLRHashString("in", this), new Integer(140));
+	literals.put(new ANTLRHashString("let", this), new Integer(119));
+	literals.put(new ANTLRHashString("base-uri", this), new Integer(80));
+	literals.put(new ANTLRHashString("processing-instruction", this), new Integer(190));
+	literals.put(new ANTLRHashString("parent", this), new Integer(206));
+	literals.put(new ANTLRHashString("switch", this), new Integer(124));
+	literals.put(new ANTLRHashString("descendant", this), new Integer(203));
+	literals.put(new ANTLRHashString("update", this), new Integer(126));
+	literals.put(new ANTLRHashString("every", this), new Integer(122));
+	literals.put(new ANTLRHashString("group", this), new Integer(146));
+	literals.put(new ANTLRHashString("satisfies", this), new Integer(147));
+	literals.put(new ANTLRHashString("div", this), new Integer(175));
+	literals.put(new ANTLRHashString("item", this), new Integer(115));
+	literals.put(new ANTLRHashString("child", this), new Integer(201));
 }
 
 public Token nextToken() throws TokenStreamException {
@@ -2304,17 +2305,17 @@ tryAgain:
 		int _saveIndex;
 		
 		{
-		int _cnt568=0;
-		_loop568:
+		int _cnt572=0;
+		_loop572:
 		do {
 			if ((_tokenSet_2.member(LA(1)))) {
 				mDIGIT(false);
 			}
 			else {
-				if ( _cnt568>=1 ) { break _loop568; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
+				if ( _cnt572>=1 ) { break _loop572; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
 			}
 			
-			_cnt568++;
+			_cnt572++;
 		} while (true);
 		}
 		if ( _createToken && _token==null && _ttype!=Token.SKIP ) {
@@ -2455,8 +2456,8 @@ tryAgain:
 		int _saveIndex;
 		
 		{
-		int _cnt571=0;
-		_loop571:
+		int _cnt575=0;
+		_loop575:
 		do {
 			switch ( LA(1)) {
 			case '0':  case '1':  case '2':  case '3':
@@ -2480,10 +2481,10 @@ tryAgain:
 			}
 			default:
 			{
-				if ( _cnt571>=1 ) { break _loop571; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
+				if ( _cnt575>=1 ) { break _loop575; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
 			}
 			}
-			_cnt571++;
+			_cnt575++;
 		} while (true);
 		}
 		if ( _createToken && _token==null && _ttype!=Token.SKIP ) {
@@ -3207,13 +3208,13 @@ tryAgain:
 		
 		mNMSTART(false);
 		{
-		_loop578:
+		_loop582:
 		do {
 			if ((_tokenSet_5.member(LA(1)))) {
 				mNMCHAR(false);
 			}
 			else {
-				break _loop578;
+				break _loop582;
 			}
 			
 		} while (true);
@@ -3232,8 +3233,8 @@ tryAgain:
 		int _saveIndex;
 		
 		{
-		int _cnt581=0;
-		_loop581:
+		int _cnt585=0;
+		_loop585:
 		do {
 			if ((LA(1)==' ') && (true) && (true) && (true)) {
 				match(' ');
@@ -3251,10 +3252,10 @@ tryAgain:
 				match('\r');
 			}
 			else {
-				if ( _cnt581>=1 ) { break _loop581; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
+				if ( _cnt585>=1 ) { break _loop585; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
 			}
 			
-			_cnt581++;
+			_cnt585++;
 		} while (true);
 		}
 		if ( _createToken && _token==null && _ttype!=Token.SKIP ) {
@@ -3271,10 +3272,10 @@ tryAgain:
 		
 		match("(:~");
 		{
-		_loop585:
+		_loop589:
 		do {
 			// nongreedy exit test
-			if ((LA(1)==':') && (LA(2)==')') && (true)) break _loop585;
+			if ((LA(1)==':') && (LA(2)==')') && (true)) break _loop589;
 			if (((LA(1) >= '\u0003' && LA(1) <= '\ufffe')) && ((LA(2) >= '\u0003' && LA(2) <= '\ufffe')) && ((LA(3) >= '\u0003' && LA(3) <= '\ufffe'))) {
 				{
 				if ((LA(1)=='(') && (LA(2)==':') && ((LA(3) >= '\u0003' && LA(3) <= '\ufffe')) && ((LA(4) >= '\u0003' && LA(4) <= '\ufffe'))) {
@@ -3290,7 +3291,7 @@ tryAgain:
 				}
 			}
 			else {
-				break _loop585;
+				break _loop589;
 			}
 			
 		} while (true);
@@ -3310,10 +3311,10 @@ tryAgain:
 		
 		match("(:");
 		{
-		_loop589:
+		_loop593:
 		do {
 			// nongreedy exit test
-			if ((LA(1)==':') && (LA(2)==')') && (true) && (true)) break _loop589;
+			if ((LA(1)==':') && (LA(2)==')') && (true) && (true)) break _loop593;
 			if (((LA(1) >= '\u0003' && LA(1) <= '\ufffe')) && ((LA(2) >= '\u0003' && LA(2) <= '\ufffe')) && ((LA(3) >= '\u0003' && LA(3) <= '\ufffe')) && (true)) {
 				{
 				if ((LA(1)=='(') && (LA(2)==':') && ((LA(3) >= '\u0003' && LA(3) <= '\ufffe')) && ((LA(4) >= '\u0003' && LA(4) <= '\ufffe'))) {
@@ -3329,7 +3330,7 @@ tryAgain:
 				}
 			}
 			else {
-				break _loop589;
+				break _loop593;
 			}
 			
 		} while (true);
@@ -3380,13 +3381,13 @@ tryAgain:
 			{
 				match('.');
 				{
-				_loop597:
+				_loop601:
 				do {
 					if ((_tokenSet_2.member(LA(1)))) {
 						mDIGIT(false);
 					}
 					else {
-						break _loop597;
+						break _loop601;
 					}
 					
 				} while (true);
@@ -3474,13 +3475,13 @@ tryAgain:
 			if ((LA(1)=='.')) {
 				match('.');
 				{
-				_loop605:
+				_loop609:
 				do {
 					if ((_tokenSet_2.member(LA(1)))) {
 						mDIGIT(false);
 					}
 					else {
-						break _loop605;
+						break _loop609;
 					}
 					
 				} while (true);
@@ -3588,7 +3589,7 @@ tryAgain:
 			match('"');
 			text.setLength(_saveIndex);
 			{
-			_loop615:
+			_loop619:
 			do {
 				if ((LA(1)=='&') && (LA(2)=='a'||LA(2)=='g'||LA(2)=='l'||LA(2)=='q')) {
 					mPREDEFINED_ENTITY_REF(false);
@@ -3610,7 +3611,7 @@ tryAgain:
 					}
 				}
 				else {
-					break _loop615;
+					break _loop619;
 				}
 				
 			} while (true);
@@ -3626,7 +3627,7 @@ tryAgain:
 			match('\'');
 			text.setLength(_saveIndex);
 			{
-			_loop619:
+			_loop623:
 			do {
 				if ((LA(1)=='&') && (LA(2)=='a'||LA(2)=='g'||LA(2)=='l'||LA(2)=='q')) {
 					mPREDEFINED_ENTITY_REF(false);
@@ -3648,7 +3649,7 @@ tryAgain:
 					}
 				}
 				else {
-					break _loop619;
+					break _loop623;
 				}
 				
 			} while (true);
@@ -3682,7 +3683,7 @@ tryAgain:
 		mLCURLY(false);
 		text.setLength(_saveIndex);
 		{
-		_loop623:
+		_loop627:
 		do {
 			if ((LA(1)=='&') && (LA(2)=='a'||LA(2)=='g'||LA(2)=='l'||LA(2)=='q')) {
 				mPREDEFINED_ENTITY_REF(false);
@@ -3696,7 +3697,7 @@ tryAgain:
 				}
 			}
 			else {
-				break _loop623;
+				break _loop627;
 			}
 			
 		} while (true);
@@ -3717,8 +3718,8 @@ tryAgain:
 		int _saveIndex;
 		
 		{
-		int _cnt627=0;
-		_loop627:
+		int _cnt631=0;
+		_loop631:
 		do {
 			if ((_tokenSet_9.member(LA(1)))) {
 				{
@@ -3726,10 +3727,10 @@ tryAgain:
 				}
 			}
 			else {
-				if ( _cnt627>=1 ) { break _loop627; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
+				if ( _cnt631>=1 ) { break _loop631; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
 			}
 			
-			_cnt627++;
+			_cnt631++;
 		} while (true);
 		}
 		if ( _createToken && _token==null && _ttype!=Token.SKIP ) {
@@ -3751,8 +3752,8 @@ tryAgain:
 		int _saveIndex;
 		
 		{
-		int _cnt631=0;
-		_loop631:
+		int _cnt635=0;
+		_loop635:
 		do {
 			if ((_tokenSet_10.member(LA(1)))) {
 				{
@@ -3760,10 +3761,10 @@ tryAgain:
 				}
 			}
 			else {
-				if ( _cnt631>=1 ) { break _loop631; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
+				if ( _cnt635>=1 ) { break _loop635; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
 			}
 			
-			_cnt631++;
+			_cnt635++;
 		} while (true);
 		}
 		if ( _createToken && _token==null && _ttype!=Token.SKIP ) {
@@ -3813,8 +3814,8 @@ tryAgain:
 		int _saveIndex;
 		
 		{
-		int _cnt636=0;
-		_loop636:
+		int _cnt640=0;
+		_loop640:
 		do {
 			switch ( LA(1)) {
 			case '\t':
@@ -3876,10 +3877,10 @@ tryAgain:
 					matchRange('\u007e','\uFFFD');
 				}
 			else {
-				if ( _cnt636>=1 ) { break _loop636; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
+				if ( _cnt640>=1 ) { break _loop640; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
 			}
 			}
-			_cnt636++;
+			_cnt640++;
 		} while (true);
 		}
 		if ( _createToken && _token==null && _ttype!=Token.SKIP ) {
@@ -3898,7 +3899,7 @@ tryAgain:
 		match("<!--");
 		text.setLength(_saveIndex);
 		{
-		_loop643:
+		_loop647:
 		do {
 			if ((_tokenSet_11.member(LA(1)))) {
 				{
@@ -3906,10 +3907,10 @@ tryAgain:
 				}
 			}
 			else {
-				boolean synPredMatched642 = false;
+				boolean synPredMatched646 = false;
 				if (((LA(1)=='-'))) {
-					int _m642 = mark();
-					synPredMatched642 = true;
+					int _m646 = mark();
+					synPredMatched646 = true;
 					inputState.guessing++;
 					try {
 						{
@@ -3920,16 +3921,16 @@ tryAgain:
 						}
 					}
 					catch (RecognitionException pe) {
-						synPredMatched642 = false;
+						synPredMatched646 = false;
 					}
-					rewind(_m642);
+					rewind(_m646);
 inputState.guessing--;
 				}
-				if ( synPredMatched642 ) {
+				if ( synPredMatched646 ) {
 					match('-');
 				}
 				else {
-					break _loop643;
+					break _loop647;
 				}
 				}
 			} while (true);
@@ -3954,7 +3955,7 @@ inputState.guessing--;
 		if ((LA(1)==' ')) {
 			match(' ');
 			{
-			_loop651:
+			_loop655:
 			do {
 				if ((_tokenSet_12.member(LA(1)))) {
 					{
@@ -3962,10 +3963,10 @@ inputState.guessing--;
 					}
 				}
 				else {
-					boolean synPredMatched650 = false;
+					boolean synPredMatched654 = false;
 					if (((LA(1)=='?'))) {
-						int _m650 = mark();
-						synPredMatched650 = true;
+						int _m654 = mark();
+						synPredMatched654 = true;
 						inputState.guessing++;
 						try {
 							{
@@ -3976,16 +3977,16 @@ inputState.guessing--;
 							}
 						}
 						catch (RecognitionException pe) {
-							synPredMatched650 = false;
+							synPredMatched654 = false;
 						}
-						rewind(_m650);
+						rewind(_m654);
 inputState.guessing--;
 					}
-					if ( synPredMatched650 ) {
+					if ( synPredMatched654 ) {
 						match('?');
 					}
 					else {
-						break _loop651;
+						break _loop655;
 					}
 					}
 				} while (true);
@@ -4011,12 +4012,12 @@ inputState.guessing--;
 		mXML_CDATA_START(false);
 		text.setLength(_saveIndex);
 		{
-		_loop662:
+		_loop666:
 		do {
-			boolean synPredMatched657 = false;
+			boolean synPredMatched661 = false;
 			if (((LA(1)==']') && ((LA(2) >= '\u0003' && LA(2) <= '\ufffe')) && ((LA(3) >= '\u0003' && LA(3) <= '\ufffe')) && ((LA(4) >= '\u0003' && LA(4) <= '\ufffe')))) {
-				int _m657 = mark();
-				synPredMatched657 = true;
+				int _m661 = mark();
+				synPredMatched661 = true;
 				inputState.guessing++;
 				try {
 					{
@@ -4027,19 +4028,19 @@ inputState.guessing--;
 					}
 				}
 				catch (RecognitionException pe) {
-					synPredMatched657 = false;
+					synPredMatched661 = false;
 				}
-				rewind(_m657);
+				rewind(_m661);
 inputState.guessing--;
 			}
-			if ( synPredMatched657 ) {
+			if ( synPredMatched661 ) {
 				match(']');
 			}
 			else {
-				boolean synPredMatched660 = false;
+				boolean synPredMatched664 = false;
 				if (((LA(1)==']') && (LA(2)==']') && ((LA(3) >= '\u0003' && LA(3) <= '\ufffe')) && ((LA(4) >= '\u0003' && LA(4) <= '\ufffe')))) {
-					int _m660 = mark();
-					synPredMatched660 = true;
+					int _m664 = mark();
+					synPredMatched664 = true;
 					inputState.guessing++;
 					try {
 						{
@@ -4051,12 +4052,12 @@ inputState.guessing--;
 						}
 					}
 					catch (RecognitionException pe) {
-						synPredMatched660 = false;
+						synPredMatched664 = false;
 					}
-					rewind(_m660);
+					rewind(_m664);
 inputState.guessing--;
 				}
-				if ( synPredMatched660 ) {
+				if ( synPredMatched664 ) {
 					{
 					match(']');
 					match(']');
@@ -4068,7 +4069,7 @@ inputState.guessing--;
 					}
 				}
 				else {
-					break _loop662;
+					break _loop666;
 				}
 				}
 			} while (true);
@@ -4089,8 +4090,8 @@ inputState.guessing--;
 		int _saveIndex;
 		
 		{
-		int _cnt666=0;
-		_loop666:
+		int _cnt670=0;
+		_loop670:
 		do {
 			if ((LA(1)=='\t'||LA(1)=='\n'||LA(1)=='\r'||LA(1)==' ')) {
 				{
@@ -4123,10 +4124,10 @@ inputState.guessing--;
 				}
 			}
 			else {
-				if ( _cnt666>=1 ) { break _loop666; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
+				if ( _cnt670>=1 ) { break _loop670; } else {throw new NoViableAltForCharException((char)LA(1), getFilename(), getLine(), getColumn());}
 			}
 			
-			_cnt666++;
+			_cnt670++;
 		} while (true);
 		}
 		if ( _createToken && _token==null && _ttype!=Token.SKIP ) {
@@ -4173,15 +4174,15 @@ inputState.guessing--;
 			mWS(false);
 			text.setLength(_saveIndex);
 			{
-			_loop672:
+			_loop676:
 			do {
 				// nongreedy exit test
-				if ((LA(1)=='#') && (LA(2)==')') && (true)) break _loop672;
+				if ((LA(1)=='#') && (LA(2)==')') && (true)) break _loop676;
 				if (((LA(1) >= '\u0003' && LA(1) <= '\ufffe')) && ((LA(2) >= '\u0003' && LA(2) <= '\ufffe')) && ((LA(3) >= '\u0003' && LA(3) <= '\ufffe'))) {
 					matchNot(EOF_CHAR);
 				}
 				else {
-					break _loop672;
+					break _loop676;
 				}
 				
 			} while (true);
@@ -4241,10 +4242,10 @@ inputState.guessing--;
 			break;
 		}
 		default:
-			boolean synPredMatched677 = false;
+			boolean synPredMatched681 = false;
 			if (((LA(1)=='(') && (LA(2)==':') && (LA(3)=='~') && ((LA(4) >= '\u0003' && LA(4) <= '\ufffe')))) {
-				int _m677 = mark();
-				synPredMatched677 = true;
+				int _m681 = mark();
+				synPredMatched681 = true;
 				inputState.guessing++;
 				try {
 					{
@@ -4254,12 +4255,12 @@ inputState.guessing--;
 					}
 				}
 				catch (RecognitionException pe) {
-					synPredMatched677 = false;
+					synPredMatched681 = false;
 				}
-				rewind(_m677);
+				rewind(_m681);
 inputState.guessing--;
 			}
-			if ( synPredMatched677 ) {
+			if ( synPredMatched681 ) {
 				mXQDOC_COMMENT(false);
 				if ( inputState.guessing==0 ) {
 					
@@ -4291,7 +4292,7 @@ inputState.guessing--;
 					
 							String data = new String(text.getBuffer(),_begin,text.length()-_begin);
 							parseLinefeeds(data);
-							_ttype = XML_COMMENT; 
+							_ttype = XML_COMMENT;
 						
 				}
 			}
@@ -4302,10 +4303,10 @@ inputState.guessing--;
 				}
 			}
 			else {
-				boolean synPredMatched684 = false;
+				boolean synPredMatched688 = false;
 				if (((_tokenSet_15.member(LA(1))) && (_tokenSet_16.member(LA(2))) && (_tokenSet_17.member(LA(3))) && (true))) {
-					int _m684 = mark();
-					synPredMatched684 = true;
+					int _m688 = mark();
+					synPredMatched688 = true;
 					inputState.guessing++;
 					try {
 						{
@@ -4332,22 +4333,22 @@ inputState.guessing--;
 						}
 					}
 					catch (RecognitionException pe) {
-						synPredMatched684 = false;
+						synPredMatched688 = false;
 					}
-					rewind(_m684);
+					rewind(_m688);
 inputState.guessing--;
 				}
-				if ( synPredMatched684 ) {
+				if ( synPredMatched688 ) {
 					mDOUBLE_LITERAL(false);
 					if ( inputState.guessing==0 ) {
 						_ttype = DOUBLE_LITERAL;
 					}
 				}
 				else {
-					boolean synPredMatched693 = false;
+					boolean synPredMatched697 = false;
 					if (((_tokenSet_15.member(LA(1))) && (_tokenSet_16.member(LA(2))) && (_tokenSet_17.member(LA(3))) && (true))) {
-						int _m693 = mark();
-						synPredMatched693 = true;
+						int _m697 = mark();
+						synPredMatched697 = true;
 						inputState.guessing++;
 						try {
 							{
@@ -4401,12 +4402,12 @@ inputState.guessing--;
 							}
 						}
 						catch (RecognitionException pe) {
-							synPredMatched693 = false;
+							synPredMatched697 = false;
 						}
-						rewind(_m693);
+						rewind(_m697);
 inputState.guessing--;
 					}
-					if ( synPredMatched693 ) {
+					if ( synPredMatched697 ) {
 						mDOUBLE_LITERAL(false);
 						if ( inputState.guessing==0 ) {
 							_ttype = DOUBLE_LITERAL;
@@ -4425,10 +4426,10 @@ inputState.guessing--;
 						}
 					}
 					else {
-						boolean synPredMatched675 = false;
+						boolean synPredMatched679 = false;
 						if (((LA(1)=='<') && (LA(2)=='?'))) {
-							int _m675 = mark();
-							synPredMatched675 = true;
+							int _m679 = mark();
+							synPredMatched679 = true;
 							inputState.guessing++;
 							try {
 								{
@@ -4436,12 +4437,12 @@ inputState.guessing--;
 								}
 							}
 							catch (RecognitionException pe) {
-								synPredMatched675 = false;
+								synPredMatched679 = false;
 							}
-							rewind(_m675);
+							rewind(_m679);
 inputState.guessing--;
 						}
-						if ( synPredMatched675 ) {
+						if ( synPredMatched679 ) {
 							mXML_PI(false);
 							if ( inputState.guessing==0 ) {
 								_ttype = XML_PI;
@@ -4494,10 +4495,10 @@ inputState.guessing--;
 							}
 						}
 						else {
-							boolean synPredMatched679 = false;
+							boolean synPredMatched683 = false;
 							if (((LA(1)=='|') && (LA(2)=='|') && (true) && (true))) {
-								int _m679 = mark();
-								synPredMatched679 = true;
+								int _m683 = mark();
+								synPredMatched683 = true;
 								inputState.guessing++;
 								try {
 									{
@@ -4506,22 +4507,22 @@ inputState.guessing--;
 									}
 								}
 								catch (RecognitionException pe) {
-									synPredMatched679 = false;
+									synPredMatched683 = false;
 								}
-								rewind(_m679);
+								rewind(_m683);
 inputState.guessing--;
 							}
-							if ( synPredMatched679 ) {
+							if ( synPredMatched683 ) {
 								mCONCAT(false);
 								if ( inputState.guessing==0 ) {
 									_ttype = CONCAT;
 								}
 							}
 							else {
-								boolean synPredMatched681 = false;
+								boolean synPredMatched685 = false;
 								if ((((LA(1)=='.') && (LA(2)=='.') && (true) && (true))&&( !(inAttributeContent || inElementContent) ))) {
-									int _m681 = mark();
-									synPredMatched681 = true;
+									int _m685 = mark();
+									synPredMatched685 = true;
 									inputState.guessing++;
 									try {
 										{
@@ -4530,12 +4531,12 @@ inputState.guessing--;
 										}
 									}
 									catch (RecognitionException pe) {
-										synPredMatched681 = false;
+										synPredMatched685 = false;
 									}
-									rewind(_m681);
+									rewind(_m685);
 inputState.guessing--;
 								}
-								if ( synPredMatched681 ) {
+								if ( synPredMatched685 ) {
 									mPARENT(false);
 									if ( inputState.guessing==0 ) {
 										_ttype = PARENT;
@@ -4577,9 +4578,9 @@ inputState.guessing--;
 									mPRAGMA_END(false);
 									if ( inputState.guessing==0 ) {
 										
-												inPragma = false; 
+												inPragma = false;
 										//wsExplicit = true;
-												_ttype = PRAGMA_END; 
+												_ttype = PRAGMA_END;
 											
 									}
 								}
@@ -4648,10 +4649,10 @@ inputState.guessing--;
 									}
 								}
 								else {
-									boolean synPredMatched686 = false;
+									boolean synPredMatched690 = false;
 									if (((_tokenSet_15.member(LA(1))) && (true) && (true) && (true))) {
-										int _m686 = mark();
-										synPredMatched686 = true;
+										int _m690 = mark();
+										synPredMatched690 = true;
 										inputState.guessing++;
 										try {
 											{
@@ -4660,22 +4661,22 @@ inputState.guessing--;
 											}
 										}
 										catch (RecognitionException pe) {
-											synPredMatched686 = false;
+											synPredMatched690 = false;
 										}
-										rewind(_m686);
+										rewind(_m690);
 inputState.guessing--;
 									}
-									if ( synPredMatched686 ) {
+									if ( synPredMatched690 ) {
 										mDECIMAL_LITERAL(false);
 										if ( inputState.guessing==0 ) {
 											_ttype = DECIMAL_LITERAL;
 										}
 									}
 									else {
-										boolean synPredMatched688 = false;
+										boolean synPredMatched692 = false;
 										if (((LA(1)=='.') && (true) && (true) && (true))) {
-											int _m688 = mark();
-											synPredMatched688 = true;
+											int _m692 = mark();
+											synPredMatched692 = true;
 											inputState.guessing++;
 											try {
 												{
@@ -4683,22 +4684,22 @@ inputState.guessing--;
 												}
 											}
 											catch (RecognitionException pe) {
-												synPredMatched688 = false;
+												synPredMatched692 = false;
 											}
-											rewind(_m688);
+											rewind(_m692);
 inputState.guessing--;
 										}
-										if ( synPredMatched688 ) {
+										if ( synPredMatched692 ) {
 											mSELF(false);
 											if ( inputState.guessing==0 ) {
 												_ttype = SELF;
 											}
 										}
 										else {
-											boolean synPredMatched695 = false;
+											boolean synPredMatched699 = false;
 											if (((_tokenSet_15.member(LA(1))) && (true) && (true) && (true))) {
-												int _m695 = mark();
-												synPredMatched695 = true;
+												int _m699 = mark();
+												synPredMatched699 = true;
 												inputState.guessing++;
 												try {
 													{
@@ -4707,12 +4708,12 @@ inputState.guessing--;
 													}
 												}
 												catch (RecognitionException pe) {
-													synPredMatched695 = false;
+													synPredMatched699 = false;
 												}
-												rewind(_m695);
+												rewind(_m699);
 inputState.guessing--;
 											}
-											if ( synPredMatched695 ) {
+											if ( synPredMatched699 ) {
 												mDECIMAL_LITERAL(false);
 												if ( inputState.guessing==0 ) {
 													_ttype = DECIMAL_LITERAL;
